--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="scss/style.scss">
 	<script type="module" src="js/script.js"></script>
-	<title>Oleh Rozhanskyi</title>
+	<title>Green Bank</title>
 </head>
 <body class="body">
 	<header class="header">
@@ -25,7 +25,7 @@
 						<a href="#" class="menu__link"></a>
 					</li>
 					<li class="menu__item">
-						<a href="#" class="menu__link">ą</a>
+						<a href="#" class="menu__link"></a>
 					</li>
 				</ul>
 				<div class="button-block button-block--menu">
@@ -41,10 +41,11 @@
 		</div>
 	</header>
 	<main class="main">
+		<h1></h1>
 	</main>
 	<footer class="footer">
 	</footer>
-	<div class="modals">
+	<!-- <div class="modals">
 		<div class="modals__overlay">
 			<div class="modals__item" data-target="modal-01">
 				<h2 class="modals__title">Login</h2>
@@ -59,6 +60,6 @@
 				<button type="button" class="modals-btn"></button>
 			</div>
 		</div>
-	</div>
+	</div> -->
 </body>
 </html>
