--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,37 +11,33 @@
 	<header class="header">
 		<div class="header__container">
 			<a class="header__logo">
-				<img class="header__img-logo" src="#" alt="" width="52" height="52">
+				<img class="header__img-logo" src="./img/icon/header-logo.svg" alt="Green Bank logo" width="24" height="24">
+				<span class="header__span-logo">GreenBank</span>
 			</a>
 			<nav class="header__menu menu">
 				<ul class="menu__list">
 					<li class="menu__item">
-						<a href="#" class="menu__link"></a>
+						<a href="#" class="menu__link">Why Us</a>
 					</li>
 					<li class="menu__item">
-						<a href="#" class="menu__link"></a>
+						<a href="#" class="menu__link">Services</a>
 					</li>
 					<li class="menu__item">
-						<a href="#" class="menu__link"></a>
+						<a href="#" class="menu__link">Our Process</a>
 					</li>
 					<li class="menu__item">
-						<a href="#" class="menu__link"></a>
+						<a href="#" class="menu__link">Payments</a>
+					</li>
+					<li class="menu__item">
+						<a href="#" class="menu__link">FAQs</a>
 					</li>
 				</ul>
-				<div class="button-block button-block--menu">
-					<button class="button-block__button button-block__button--white button-block__button--menu" type="button"></button>
-					<button class="button-block__button button-block__button--black button-block__button--menu" type="button"></button>
-				</div>
 			</nav>
-			<div class="button-block">
-				<button class="button-block__button button-block__button--white" type="button" data-path="modal-01"></button>
-				<button class="button-block__button button-block__button--black" type="button"></button>
-				<button type="button" class="burger-btn" aria-label="open menu" aria-expanded="false"><span></span></button>
-			</div>
+			<button class="header__button" type="button" data-path="modal-01"></button>
+			<button class="burger-btn" type="button" aria-label="open site menu" aria-expanded="false"><span></span></button>
 		</div>
 	</header>
 	<main class="main">
-		<h1></h1>
 	</main>
 	<footer class="footer">
 	</footer>
