--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="apple-touch-icon" sizes="180x180" href="./img/icon/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./img/icon/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./img/icon/favicon/favicon-16x16.png">
 	<link rel="stylesheet" href="scss/style.scss">
 	<script type="module" src="js/script.js"></script>
 	<title>Green Bank</title>
@@ -44,21 +47,21 @@
 	</main>
 	<footer class="footer">
 	</footer>
-	<!-- <div class="modals">
+	<div class="modals">
 		<div class="modals__overlay">
 			<div class="modals__item" data-target="modal-01">
 				<h2 class="modals__title">Login</h2>
 				<form class="form" action="#" method="post">
-					<label for="login" class="visually-hidden">login</label>
+					<label for="login" aria-label="enter login"></label>
 					<input id="login" name="user-login" type="text" placeholder="Login" class="form__input">
-					<label for="password" class=" visually-hidden">password</label>
+					<label for="password" aria-label="enter password"></label>
 					<input id="password" name="user-password" type="password" placeholder="password" class="form__input">
 					<button class="form__btn" type="button">Login</button>
 				</form>
 				<a href="#!" class="modals__link">Forgot your password?</a>
-				<button type="button" class="modals-btn"></button>
+				<button type="button" class="modals-btn-close"></button>
 			</div>
 		</div>
-	</div> -->
+	</div>
 </body>
 </html>
