--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
 				<button class="header__button header__button--menu" type="button" data-path="modal-01" aria-expanded="false">Contact</button>
 			</nav>
 			<div class="header__active">
-				<button class="header__button" type="button" data-path="modal-01" aria-expanded="false">Contact</button>
-				<button class="burger-btn" type="button" aria-label="open site menu" aria-expanded="false"><span></span></button>
+				<button class="header__button" type="button" data-path="modal-01" aria-expanded="false" aria-label="open modal window">Contact</button>
+				<button class="burger-btn" type="button" aria-label="open menu" aria-expanded="false"><span></span></button>
 			</div>
 		</div>
 	</header>
