--- a/src/index.html
+++ b/src/index.html
@@ -11,56 +11,109 @@
 	<title>Green Bank</title>
 </head>
 <body class="body">
-	<header class="header">
-		<div class="header__container">
-			<a class="header__logo">
-				<img class="header__img-logo" src="./img/icon/header-logo.svg" alt="Green Bank logo" width="24" height="24">
-				<span class="header__span-logo">GreenBank</span>
-			</a>
-			<nav class="header__menu menu">
-				<ul class="menu__list">
-					<li class="menu__item">
-						<a href="#" class="menu__link">Why Us</a>
-					</li>
-					<li class="menu__item">
-						<a href="#" class="menu__link">Services</a>
-					</li>
-					<li class="menu__item">
-						<a href="#" class="menu__link">Our Process</a>
-					</li>
-					<li class="menu__item">
-						<a href="#" class="menu__link">Payments</a>
-					</li>
-					<li class="menu__item">
-						<a href="#" class="menu__link">FAQs</a>
-					</li>
-				</ul>
-				<button class="header__button header__button--menu" type="button" data-path="modal-01" aria-expanded="false">Contact</button>
-			</nav>
-			<div class="header__active">
-				<button class="header__button" type="button" data-path="modal-01" aria-expanded="false" aria-label="open modal window">Contact</button>
-				<button class="burger-btn" type="button" aria-label="open menu" aria-expanded="false"><span></span></button>
+	<div class="wrapper">
+		<header class="header">
+			<div class="header__container">
+				<a class="header__logo">
+					<img class="header__img-logo" src="./img/icon/header-logo.svg" alt="" width="24" height="24">
+					<span class="header__span-logo">GreenBank</span>
+				</a>
+				<nav class="header__menu menu">
+					<ul class="menu__list">
+						<li class="menu__item">
+							<a href="#" class="menu__link">Why Us</a>
+						</li>
+						<li class="menu__item">
+							<a href="#" class="menu__link">Services</a>
+						</li>
+						<li class="menu__item">
+							<a href="#" class="menu__link">Our Process</a>
+						</li>
+						<li class="menu__item">
+							<a href="#" class="menu__link">Payments</a>
+						</li>
+						<li class="menu__item">
+							<a href="#" class="menu__link">FAQs</a>
+						</li>
+					</ul>
+					<button class="header__button header__button--menu" type="button" data-modal-open-btn="modal-1" aria-expanded="false"><span class="visually-hidden">open modal window</span>Contact</button>
+				</nav>
+				<div class="header__active">
+					<button class="header__button" type="button" data-modal-open-btn="modal-1" aria-expanded="false"><span class="visually-hidden">open modal window</span>Contact</button>
+					<!-- <button class="header__button" type="button" data-modal-open-btn="modal-2" aria-expanded="false"><span class="visually-hidden">open modal window</span>Contact</button> -->
+					<button class="burger-btn" type="button" aria-expanded="false"><span class="visually-hidden">open menu</span><span></span></button>
+				</div>
 			</div>
-		</div>
-	</header>
-	<main class="main">
-	</main>
-	<footer class="footer">
-	</footer>
+		</header>
+		<main class="main">
+			<section class="main__banner banner">
+				<div class="banner__container">
+					<div class="banner__text-block">
+						<h1 class="banner__title">Discover the Perfect Credit Card for You</h1>
+						<p class="banner__text">Discover the power of our secure and rewarding credit cards. Explore our range of credit cards and take control of your finances today.</p>
+						<button class="banner__button button" type="button" data-modal-open-btn="modal-1" aria-expanded="false"><span class="visually-hidden">open modal window</span>Get Started</button>
+						<div class="banner__users-block users-banner">
+							<div class="users-banner__block-img">
+								<img class="users-banner__img" src="./img/banner/01.png" alt="Photo of man for avatar">
+								<img class="users-banner__img" src="./img/banner/02.png" alt="Photo of man for avatar">
+								<img class="users-banner__img" src="./img/banner/03.png" alt="Photo of woman for avatar">
+							</div>
+							<span class="users-banner__number">10.2k+</span>
+							<span class="users-banner__text">Active users around the wordls</span>
+						</div>
+					</div>
+					<div class="banner__card-block card-banner">
+						<div class="card-banner__decor"></div>
+						<span class="card-banner__text-number">Credit Card No.</span>
+						<div class="card-banner__block-number">
+							<span class="card-banner__number">1602</span>
+							<span class="card-banner__number">0911</span>
+							<span class="card-banner__number">2019</span>
+							<span class="card-banner__number">2021</span>
+						</div>
+						<div class="card-banner__block-text">
+							<span class="card-banner__text">Name</span>
+							<span class="card-banner__text">Exp.</span>
+							<span class="card-banner__name">REHAN RAIHAN</span>
+							<span class="card-banner__date">09/11</span>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer class="footer">
+		</footer>
+	</div>
 	<div class="modals">
 		<div class="modals__overlay">
-			<div class="modals__item" data-target="modal-01">
-				<h2 class="modals__title">Login</h2>
+			<div class="modals__item" data-modal-window="modal-1">
+				<div class="modals__header">
+					<h2 class="modals__title">Login</h2>
+					<button type="button" class="modals-btn-close" aria-expanded="false"><span class="visually-hidden">close modal window</span></button>
+				</div>
 				<form class="form" action="#" method="post">
-					<label for="login" aria-label="enter login"></label>
+					<label for="login"><span class="visually-hidden">enter login</span></label>
 					<input id="login" name="user-login" type="text" placeholder="Login" class="form__input">
-					<label for="password" aria-label="enter password"></label>
+					<label for="password"><span class="visually-hidden">enter password</span></label>
 					<input id="password" name="user-password" type="password" placeholder="password" class="form__input">
 					<button class="form__btn" type="button">Login</button>
 				</form>
 				<a href="#!" class="modals__link">Forgot your password?</a>
-				<button type="button" class="modals-btn-close"></button>
 			</div>
+			<!-- <div class="modals__item" data-modal-window="modal-2">
+				<div class="modals__header">
+					<h2 class="modals__title">Login 2</h2>
+					<button type="button" class="modals-btn-close"><span class="visually-hidden">close modal window</span></button>
+				</div>
+				<form class="form" action="#" method="post">
+					<label for="name"><span class="visually-hidden">enter login</span></label>
+					<input id="name" name="user-login" type="text" placeholder="Login" class="form__input">
+					<label for="password-user"><span class="visually-hidden">enter password</span></label>
+					<input id="password-user" name="user-password" type="password" placeholder="password" class="form__input">
+					<button class="form__btn" type="button">Login</button>
+				</form>
+				<a href="#!" class="modals__link">Forgot your password?</a>
+			</div> -->
 		</div>
 	</div>
 </body>
