banner section responsive

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,7 @@
 							<span class="card-banner__date">09/11</span>
 						</div>
 					</div>
+					<img class="banner__img-card" src="./img/banner/credit-card.svg" alt="">
 				</div>
 			</section>
 		</main>
