about section responsive

--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,9 @@
 						<button class="banner__button button" type="button" data-modal-open-btn="modal-1" aria-expanded="false"><span class="visually-hidden">open modal window</span>Get Started</button>
 						<div class="banner__users-block users-banner">
 							<div class="users-banner__block-img">
-								<img class="users-banner__img" src="./img/banner/01.png" alt="Photo of man for avatar">
-								<img class="users-banner__img" src="./img/banner/02.png" alt="Photo of man for avatar">
-								<img class="users-banner__img" src="./img/banner/03.png" alt="Photo of woman for avatar">
+								<img class="users-banner__img" src="./img/banner/01.png" alt="">
+								<img class="users-banner__img" src="./img/banner/02.png" alt="">
+								<img class="users-banner__img" src="./img/banner/03.png" alt="">
 							</div>
 							<span class="users-banner__number">10.2k+</span>
 							<span class="users-banner__text">Active users around the wordls</span>
@@ -78,7 +78,30 @@
 							<span class="card-banner__date">09/11</span>
 						</div>
 					</div>
-					<img class="banner__img-card" src="./img/banner/credit-card.svg" alt="">
+					<img class="banner__img-card" src="./img/banner/credit-card.svg" alt="image bank card">
+				</div>
+			</section>
+			<section class="main__about about">
+				<div class="about__container">
+					<h2 class="visually-hidden">about us</h2>
+					<ul class="about__list">
+						<li class="about__li">
+							<span class="about__span-list">16y</span>
+							<h3 class="about__title-list">Experience</h3>
+						</li>
+						<li class="about__li">
+							<span class="about__span-list">250+</span>
+							<h3 class="about__title-list">Merchant Partner</h3>
+						</li>
+						<li class="about__li">
+							<span class="about__span-list">18+</span>
+							<h3 class="about__title-list">Years Experience</h3>
+						</li>
+						<li class="about__li">
+							<span class="about__span-list">10.2k+</span>
+							<h3 class="about__title-list">Worldwide Clients</h3>
+						</li>
+					</ul>
 				</div>
 			</section>
 		</main>
