offer section responsive

--- a/src/index.html
+++ b/src/index.html
@@ -104,6 +104,50 @@
 					</ul>
 				</div>
 			</section>
+			<section class="main__slider slider">
+				<div class="slider__container">
+					<h2 class="visually-hidden">our partners</h2>
+					<ul class="slider__list">
+						<li class="slider__li">
+							<img class="slider__img" src="./img/slider/upwork.svg" alt="logo upwork">
+						</li>
+						<li class="slider__li">
+							<img class="slider__img" src="./img/slider/petal.svg" alt="logo petal">
+						</li>
+						<li class="slider__li">
+							<img class="slider__img" src="./img/slider/rakuten.svg" alt="logo rakuten">
+						</li>
+						<li class="slider__li">
+							<img class="slider__img" src="./img/slider/nytimes.svg" alt="logo the new york times">
+						</li>
+						<li class="slider__li">
+							<img class="slider__img" src="./img/slider/vice.svg" alt="logo vice">
+						</li>
+						<li class="slider__li">
+							<img class="slider__img" src="./img/slider/dell.svg" alt="logo dell">
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="main__offer offer">
+				<div class="offer__container">
+					<h2 class="offer__title title">What do we offer?</h2>
+					<ul class="offer__list">
+						<li class="offer__li offer__li--security">
+							<h3 class="offer__title-list">Security Guarantee </h3>
+							<span class="offer__text-list">Your data and funds will be securely protected.</span>
+						</li>
+						<li class="offer__li offer__li--pie">
+							<h3 class="offer__title-list">Investing</h3>
+							<span class="offer__text-list">Your data and funds will be securely protected.</span>
+						</li>
+						<li class="offer__li offer__li--rectangle">
+							<h3 class="offer__title-list">Multiple Method</h3>
+							<span class="offer__text-list">Your data and funds will be securely protected.</span>
+						</li>
+					</ul>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 		</footer>
