--- a/src/index.html
+++ b/src/index.html
@@ -62,20 +62,29 @@
 							<span class="users-banner__text">Active users around the wordls</span>
 						</div>
 					</div>
-					<div class="banner__card-block card-banner">
-						<div class="card-banner__decor"></div>
-						<span class="card-banner__text-number">Credit Card No.</span>
-						<div class="card-banner__block-number">
-							<span class="card-banner__number">1602</span>
-							<span class="card-banner__number">0911</span>
-							<span class="card-banner__number">2019</span>
-							<span class="card-banner__number">2021</span>
+					<div class="banner__card-block card">
+						<div class="card__decor"></div>
+						<svg aria-hidden="true" role="img" class="card__decor-master-card" width="60" height="35">
+							<use xlink:href="./img/icon/sprite.svg#master-card"></use>
+						</svg>
+						<svg aria-hidden="true" role="img" class="card__decor-nfs" width="27" height="47">
+							<use xlink:href="./img/icon/sprite.svg#nfs"></use>
+						</svg>
+						<svg aria-hidden="true" role="img" class="card__decor-chip" width="59" height="48">
+							<use xlink:href="./img/icon/sprite.svg#chip"></use>
+						</svg>
+						<span class="card__text-number">Credit Card No.</span>
+						<div class="card__block-number">
+							<span class="card__number">1602</span>
+							<span class="card__number">0911</span>
+							<span class="card__number">2019</span>
+							<span class="card__number">2021</span>
 						</div>
-						<div class="card-banner__block-text">
-							<span class="card-banner__text">Name</span>
-							<span class="card-banner__text">Exp.</span>
-							<span class="card-banner__name">REHAN RAIHAN</span>
-							<span class="card-banner__date">09/11</span>
+						<div class="card__block-text">
+							<span class="card__text">Name</span>
+							<span class="card__text">Exp.</span>
+							<span class="card__name">REHAN RAIHAN</span>
+							<span class="card__date">09/11</span>
 						</div>
 					</div>
 					<img class="banner__img-card" src="./img/banner/credit-card.svg" alt="image bank card">
@@ -146,6 +155,150 @@
 							<span class="offer__text-list">Your data and funds will be securely protected.</span>
 						</li>
 					</ul>
+				</div>
+			</section>
+			<section class="main__design design">
+				<div class="design__container">
+					<div class="design__text-block">
+						<h2 class="design__title title">Design your personalized credit card.</h2>
+						<p class="design__text">You have the freedom to personalize the design of your credit card, ensuring a truly unique experience that makes you feel extraordinary</p>
+						<button class="design__button button" type="button">Create New Card</button>
+					</div>
+					<div class="design__block-card">
+						<img class="design__img" src="./img/design/card.svg" alt="">
+						<div class="card card--design-block card--first">
+							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--first" width="60" height="35">
+								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
+							</svg>
+							<svg aria-hidden="true" role="img" class="card__decor-nfs card__decor-nfs--first" width="27" height="47">
+								<use xlink:href="./img/icon/sprite.svg#nfs"></use>
+							</svg>
+							<svg aria-hidden="true" role="img" class="card__decor-chip card__decor-chip--first" width="59" height="48">
+								<use xlink:href="./img/icon/sprite.svg#chip"></use>
+							</svg>
+							<span class="card__text-number card__text-number--first">Credit Card No.</span>
+							<div class="card__block-number">
+								<span class="card__number card__number--first">1602</span>
+								<span class="card__number card__number--first">0911</span>
+								<span class="card__number card__number--first">2019</span>
+								<span class="card__number card__number--first">2021</span>
+							</div>
+							<div class="card__block-text">
+								<span class="card__text card__text--frst ">Name</span>
+								<span class="card__text card__text--frst ">Exp.</span>
+								<span class="card__name card__name--first">REHAN RAIHAN</span>
+								<span class="card__date card__date--first">09/11</span>
+							</div>
+						</div>
+						<div class="card card--design-block card--second">
+							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--second" width="60" height="35">
+								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
+							</svg>
+							<svg aria-hidden="true" role="img" class="card__decor-nfs card__decor-nfs--second" width="27" height="47">
+								<use xlink:href="./img/icon/sprite.svg#nfs"></use>
+							</svg>
+							<svg aria-hidden="true" role="img" class="card__decor-chip card__decor-chip--second" width="59" height="48">
+								<use xlink:href="./img/icon/sprite.svg#chip"></use>
+							</svg>
+							<span class="card__text-number">Credit Card No.</span>
+							<div class="card__block-number">
+								<span class="card__number card__number--second">1602</span>
+								<span class="card__number card__number--second">0911</span>
+								<span class="card__number card__number--second">2019</span>
+								<span class="card__number card__number--second">2021</span>
+							</div>
+							<div class="card__block-text">
+								<span class="card__text">Name</span>
+								<span class="card__text">Exp.</span>
+								<span class="card__name card__name--second">REHAN RAIHAN</span>
+								<span class="card__date card__date--second">09/11</span>
+							</div>
+						</div>
+						<div class="card card--design-block card--third">
+							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--third" width="60" height="35">
+								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
+							</svg>
+							<svg aria-hidden="true" role="img" class="card__decor-nfs card__decor-nfs--third" width="27" height="47">
+								<use xlink:href="./img/icon/sprite.svg#nfs"></use>
+							</svg>
+							<svg aria-hidden="true" role="img" class="card__decor-chip card__decor-chip--third" width="59" height="48">
+								<use xlink:href="./img/icon/sprite.svg#chip"></use>
+							</svg>
+							<span class="card__text-number">Credit Card No.</span>
+							<div class="card__block-number">
+								<span class="card__number card__number--third">1602</span>
+								<span class="card__number card__number--third">0911</span>
+								<span class="card__number card__number--third">2019</span>
+								<span class="card__number card__number--third">2021</span>
+							</div>
+							<div class="card__block-text">
+								<span class="card__text">Name</span>
+								<span class="card__text">Exp.</span>
+								<span class="card__name card__name--third">REHAN RAIHAN</span>
+								<span class="card__date card__date--third">09/11</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="main__find find">
+				<div class="find__container">
+					<div class="find__block-card">
+						<img class="find__img" src="./img/find/card.svg" alt="">
+						<div class="card card--find-block card--first card--first-find">
+							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--first" width="60" height="35">
+								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
+							</svg>
+							<svg aria-hidden="true" role="img" class="card__decor-nfs card__decor-nfs--first" width="27" height="47">
+								<use xlink:href="./img/icon/sprite.svg#nfs"></use>
+							</svg>
+							<svg aria-hidden="true" role="img" class="card__decor-chip card__decor-chip--first" width="59" height="48">
+								<use xlink:href="./img/icon/sprite.svg#chip"></use>
+							</svg>
+							<span class="card__text-number card__text-number--first">Credit Card No.</span>
+							<div class="card__block-number">
+								<span class="card__number card__number--first">1602</span>
+								<span class="card__number card__number--first">0911</span>
+								<span class="card__number card__number--first">2019</span>
+								<span class="card__number card__number--first">2021</span>
+							</div>
+							<div class="card__block-text">
+								<span class="card__text card__text--frst ">Name</span>
+								<span class="card__text card__text--frst ">Exp.</span>
+								<span class="card__name card__name--first">REHAN RAIHAN</span>
+								<span class="card__date card__date--first">09/11</span>
+							</div>
+						</div>
+						<div class="card card--find-block card--second card--second-find">
+							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--second" width="60" height="35">
+								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
+							</svg>
+							<svg aria-hidden="true" role="img" class="card__decor-nfs card__decor-nfs--second" width="27" height="47">
+								<use xlink:href="./img/icon/sprite.svg#nfs"></use>
+							</svg>
+							<svg aria-hidden="true" role="img" class="card__decor-chip card__decor-chip--second" width="59" height="48">
+								<use xlink:href="./img/icon/sprite.svg#chip"></use>
+							</svg>
+							<span class="card__text-number">Credit Card No.</span>
+							<div class="card__block-number">
+								<span class="card__number card__number--second">1602</span>
+								<span class="card__number card__number--second">0911</span>
+								<span class="card__number card__number--second">2019</span>
+								<span class="card__number card__number--second">2021</span>
+							</div>
+							<div class="card__block-text">
+								<span class="card__text">Name</span>
+								<span class="card__text">Exp.</span>
+								<span class="card__name card__name--second">REHAN RAIHAN</span>
+								<span class="card__date card__date--second">09/11</span>
+							</div>
+						</div>
+					</div>
+					<div class="find__text-block">
+						<h2 class="find__title title">Find the Perfect Credit Card for You</h2>
+						<p class="find__text">Discover your ideal credit card with ease. Our comprehensive selection caters to every financial need and lifestyle. Whether you seek cashback rewards, travel perks, or building credit, we have the perfect credit card waiting for you. Unleash the possibilities and find the credit card that fits your unique goals and aspirations.</p>
+						<a href="#!" class="find__button button">Learn More</a>
+					</div>
 				</div>
 			</section>
 		</main>
