--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="./img/icon/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./img/icon/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="./img/icon/favicon/favicon-16x16.png">
-	<link rel="stylesheet" href="./scss/swiper-bundle.min.css">
+	<link rel="stylesheet" href="./scss/components/swiper-bundle.min.css">
 	<link rel="stylesheet" href="./scss/style.scss">
-	<script src="./js/components/swiper-bundle.min.js" defer></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
 	<script type="module" src="./js/script.js"></script>
 	<title>Green Bank</title>
 </head>
