--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="./img/icon/favicon/favicon-16x16.png">
 	<link rel="stylesheet" href="./scss/components/swiper-bundle.min.css">
 	<link rel="stylesheet" href="./scss/style.scss">
-	<script src="./static/swiper-bundle.min.js" defer></script>
+	<!-- <script src="./static/swiper-bundle.min.js" defer></script> -->
 	<script type="module" src="./js/script.js"></script>
 	<title>Green Bank</title>
 </head>
