--- a/src/index.html
+++ b/src/index.html
@@ -360,6 +360,55 @@
 					</div>
 				</div>
 			</section>
+			<section class="main__faqs faqs">
+				<div class="faqs__container">
+					<h2 class="faqs__title title">FAQs</h2>
+					<ul class="faqs__list">
+						<li class="faqs__accordion accordion">
+							<button class="accordion__btn" type="button" aria-expanded="false">What credit score do I need to apply for a credit card?</button>
+							<div class="accordion__content" aria-hidden="true">
+								<p class="accordion__text">The required credit score may vary depending on the specific credit card. Generally, a good to excellent credit score (typically 670 or above) increases your chances of approval for premium credit cards.</p>
+							</div>
+						</li>
+						<li class="faqs__accordion accordion">
+							<button class="accordion__btn" type="button" aria-expanded="false">How can I apply for a credit card online?</button>
+							<div class="accordion__content" aria-hidden="true">
+								<p class="accordion__text">The required credit score may vary depending on the specific credit card. Generally, a good to excellent credit score (typically 670 or above) increases your chances of approval for premium credit cards.</p>
+							</div>
+						</li>
+						<li class="faqs__accordion accordion">
+							<button class="accordion__btn" type="button" aria-expanded="false">Are there any annual fees associated with the credit card?</button>
+							<div class="accordion__content" aria-hidden="true">
+								<p class="accordion__text">The required credit score may vary depending on the specific credit card. Generally, a good to excellent credit score (typically 670 or above) increases your chances of approval for premium credit cards.</p>
+							</div>
+						</li>
+						<li class="faqs__accordion accordion">
+							<button class="accordion__btn" type="button" aria-expanded="false">How long does it take to receive the credit card once approved?</button>
+							<div class="accordion__content" aria-hidden="true">
+								<p class="accordion__text">The required credit score may vary depending on the specific credit card. Generally, a good to excellent credit score (typically 670 or above) increases your chances of approval for premium credit cards.</p>
+							</div>
+						</li>
+						<li class="faqs__accordion accordion">
+							<button class="accordion__btn" type="button" aria-expanded="false">How can I check my credit card balance and transactions?</button>
+							<div class="accordion__content" aria-hidden="true">
+								<p class="accordion__text">The required credit score may vary depending on the specific credit card. Generally, a good to excellent credit score (typically 670 or above) increases your chances of approval for premium credit cards.</p>
+							</div>
+						</li>
+						<li class="faqs__accordion accordion">
+							<button class="accordion__btn" type="button" aria-expanded="false">What should I do if my credit card is lost or stolen?</button>
+							<div class="accordion__content" aria-hidden="true">
+								<p class="accordion__text">The required credit score may vary depending on the specific credit card. Generally, a good to excellent credit score (typically 670 or above) increases your chances of approval for premium credit cards.</p>
+							</div>
+						</li>
+						<li class="faqs__accordion accordion">
+							<button class="accordion__btn" type="button" aria-expanded="false">Is my credit card information secure?</button>
+							<div class="accordion__content" aria-hidden="true">
+								<p class="accordion__text">The required credit score may vary depending on the specific credit card. Generally, a good to excellent credit score (typically 670 or above) increases your chances of approval for premium credit cards.</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 		</footer>
