--- a/src/index.html
+++ b/src/index.html
@@ -55,9 +55,9 @@
 						<button class="banner__button button" type="button" data-modal-open-btn="modal-1" aria-expanded="false"><span class="visually-hidden">open modal window</span>Get Started</button>
 						<div class="banner__users-block users-banner">
 							<div class="users-banner__block-img">
-								<img class="users-banner__img" src="./img/banner/01.png" alt="">
-								<img class="users-banner__img" src="./img/banner/02.png" alt="">
-								<img class="users-banner__img" src="./img/banner/03.png" alt="">
+								<img class="users-banner__img" src="./img/banner/01.png" alt="" width="48" height="48">
+								<img class="users-banner__img" src="./img/banner/02.png" alt="" width="48" height="48">
+								<img class="users-banner__img" src="./img/banner/03.png" alt="" width="48" height="48">
 							</div>
 							<span class="users-banner__number">10.2k+</span>
 							<span class="users-banner__text">Active users around the wordls</span>
@@ -88,7 +88,7 @@
 							<span class="card__date">09/11</span>
 						</div>
 					</div>
-					<img class="banner__img-card" src="./img/banner/credit-card.svg" alt="image bank card">
+					<img class="banner__img-card" src="./img/banner/credit-card.svg" alt="image bank card" width="552" height="349">
 				</div>
 			</section>
 			<section class="main__about about">
@@ -166,7 +166,7 @@
 						<button class="design__button button" type="button" data-modal-open-btn="modal-1" aria-expanded="false">Create New Card</button>
 					</div>
 					<div class="design__block-card">
-						<img class="design__img" src="./img/design/card.svg" alt="">
+						<img class="design__img" src="./img/design/card.svg" alt="" width="538" height="492">
 						<div class="card card--design-block card--first">
 							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--first" width="60" height="35">
 								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
@@ -245,7 +245,7 @@
 			<section class="main__find find">
 				<div class="find__container">
 					<div class="find__block-card">
-						<img class="find__img" src="./img/find/card.svg" alt="">
+						<img class="find__img" src="./img/find/card.svg" alt="" width="457" height="491">
 						<div class="card card--find-block card--first card--first-find">
 							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--first" width="60" height="35">
 								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
@@ -310,7 +310,7 @@
 							<li class="quote__li swiper-slide">
 								<blockquote class="quote__text"> "Great session! Dani was super helpful. She shared some practical advice on how can lorem ip we go about refining our service offerings." </blockquote>
 								<div class="quote__author">
-									<img class="quote__avatar" src="./img/banner/01.png" alt="">
+									<img class="quote__avatar" src="./img/banner/01.png" alt="" width="48" height="48">
 									<span class="quote__name"> Hadid Khan </span>
 									<span class="quote__work">UIUX Designer</span>
 								</div>
@@ -318,7 +318,7 @@
 							<li class="quote__li swiper-slide">
 								<blockquote class="quote__text"> "It's is both attractive and highly adaptable. It's exactly what I've been looking forefinitely wo lorem ipsum dolorth the investment." </blockquote>
 								<div class="quote__author">
-									<img class="quote__avatar" src="./img/banner/02.png" alt="">
+									<img class="quote__avatar" src="./img/banner/02.png" alt="" width="48" height="48">
 									<span class="quote__name">Wade Warren</span>
 									<span class="quote__work">Web Designer</span>
 								</div>
@@ -326,7 +326,7 @@
 							<li class="quote__li swiper-slide">
 								<blockquote class="quote__text"> "I am really satisfied with it. I'm good to go. It really saves me time and effort. It's is exactly what our business has been lacking. " </blockquote>
 								<div class="quote__author">
-									<img class="quote__avatar" src="./img/banner/03.png" alt="">
+									<img class="quote__avatar" src="./img/banner/03.png" alt="" width="48" height="48">
 									<span class="quote__name">Jenny Wilson</span>
 									<span class="quote__work">Trust Administrator</span>
 								</div>
@@ -334,24 +334,24 @@
 							<li class="quote__li swiper-slide">
 								<blockquote class="quote__text"> "Great session! Dani was super helpful. She shared some practical advice on how can lorem ip we go about refining our service offerings." </blockquote>
 								<div class="quote__author">
-									<img class="quote__avatar" src="./img/banner/01.png" alt="">
-									<span class="quote__name"> Hadid Khan </span>
+									<img class="quote__avatar" src="./img/banner/01.png" alt="" width="48" height="48>
+									<span class=" quote__name"> Hadid Khan </span>
 									<span class="quote__work">UIUX Designer</span>
 								</div>
 							</li>
 							<li class="quote__li swiper-slide">
 								<blockquote class="quote__text"> "It's is both attractive and highly adaptable. It's exactly what I've been looking forefinitely wo lorem ipsum dolorth the investment." </blockquote>
 								<div class="quote__author">
-									<img class="quote__avatar" src="./img/banner/02.png" alt="">
-									<span class="quote__name">Wade Warren</span>
+									<img class="quote__avatar" src="./img/banner/02.png" alt="" width="48" height="48>
+									<span class=" quote__name">Wade Warren</span>
 									<span class="quote__work">Web Designer</span>
 								</div>
 							</li>
 							<li class="quote__li swiper-slide">
 								<blockquote class="quote__text"> "I am really satisfied with it. I'm good to go. It really saves me time and effort. It's is exactly what our business has been lacking. " </blockquote>
 								<div class="quote__author">
-									<img class="quote__avatar" src="./img/banner/03.png" alt="">
-									<span class="quote__name">Jenny Wilson</span>
+									<img class="quote__avatar" src="./img/banner/03.png" alt="" width="48" height="48>
+									<span class=" quote__name">Jenny Wilson</span>
 									<span class="quote__work">Trust Administrator</span>
 								</div>
 							</li>
@@ -407,6 +407,35 @@
 							</div>
 						</li>
 					</ul>
+				</div>
+			</section>
+			<section class="main__aplication aplication">
+				<div class="aplication__container">
+					<div class="aplication__text-block">
+						<h2 class="aplication__title title">Easy Way to manage your finances</h2>
+						<p class="aplication__text">Easy to use mobile app that support on android and ios.</p>
+						<ul class="aplication__button-block">
+							<li class="aplication__item-button">
+								<a href="#!" class="aplication__link">
+									<svg role="img" aria-label="link to install the program from app store" class="aplication__svg" width="123" height="32">
+										<use xlink:href="./img/icon/sprite.svg#app-store"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="aplication__item-button">
+								<a href="#!" class="aplication__link">
+									<svg role="img" aria-label="link to install the program from google play" class="aplication__svg" width="134" height="31">
+										<use xlink:href="./img/icon/sprite.svg#google-play"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<picture class="aplication__img-block">
+						<source srcset="./img/aplication/01.png?as=avif&width=604&height=851" type="image/avif">
+						<source srcset="./img/aplication/01.png?as=webp&width=604&height=851" type="image/webp">
+						<img class="aplication__img" src="./img/aplication/01.png?width=604&height=851" alt="" width="604" height="851" loading="lazy">
+					</picture>
 				</div>
 			</section>
 		</main>
