--- a/src/index.html
+++ b/src/index.html
@@ -298,7 +298,7 @@
 					<div class="find__text-block">
 						<h2 class="find__title title">Find the Perfect Credit Card for You</h2>
 						<p class="find__text">Discover your ideal credit card with ease. Our comprehensive selection caters to every financial need and lifestyle. Whether you seek cashback rewards, travel perks, or building credit, we have the perfect credit card waiting for you. Unleash the possibilities and find the credit card that fits your unique goals and aspirations.</p>
-						<a href="#!" class="find__button button">Learn More</a>
+						<a href="#!" class="find__button button message">Learn More</a>
 					</div>
 				</div>
 			</section>
@@ -416,14 +416,14 @@
 						<p class="aplication__text">Easy to use mobile app that support on android and ios.</p>
 						<ul class="aplication__button-block">
 							<li class="aplication__item-button">
-								<a href="#!" class="aplication__link">
+								<a href="#!" class="aplication__link message">
 									<svg role="img" aria-label="link to install the program from app store" class="aplication__svg" width="123" height="32">
 										<use xlink:href="./img/icon/sprite.svg#app-store"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="aplication__item-button">
-								<a href="#!" class="aplication__link">
+								<a href="#!" class="aplication__link message">
 									<svg role="img" aria-label="link to install the program from google play" class="aplication__svg" width="134" height="31">
 										<use xlink:href="./img/icon/sprite.svg#google-play"></use>
 									</svg>
