--- a/src/index.html
+++ b/src/index.html
@@ -444,7 +444,7 @@
 	</div>
 	<div class="modals">
 		<div class="modals__overlay">
-			<div class="modals__item" data-modal-window="modal-1">
+			<div class="modals__item" data-modal-window="modal-1" aria-hidden="true">
 				<div class="modals__header">
 					<h2 class="modals__title">Login</h2>
 					<button type="button" class="modals-btn-close" aria-expanded="false"><span class="visually-hidden">close modal window</span></button>
@@ -458,7 +458,7 @@
 				</form>
 				<a href="#!" class="modals__link">Forgot your password?</a>
 			</div>
-			<!-- <div class="modals__item" data-modal-window="modal-2">
+			<!-- <div class="modals__item" data-modal-window="modal-2" aria-hidden="true">
 				<div class="modals__header">
 					<h2 class="modals__title">Login 2</h2>
 					<button type="button" class="modals-btn-close"><span class="visually-hidden">close modal window</span></button>
