fix modal fix animation fix brand slider

--- a/src/index.html
+++ b/src/index.html
@@ -416,14 +416,14 @@
 						<p class="aplication__text">Easy to use mobile app that support on android and ios.</p>
 						<ul class="aplication__button-block">
 							<li class="aplication__item-button">
-								<a href="#!" class="aplication__link message">
+								<a href="https://www.apple.com/app-store/" class="aplication__link" target="_blank">
 									<svg role="img" aria-label="link to install the program from app store" class="aplication__svg" width="123" height="32">
 										<use xlink:href="./img/icon/sprite.svg#app-store"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="aplication__item-button">
-								<a href="#!" class="aplication__link message">
+								<a href="https://play.google.com/store/games" class="aplication__link" target="_blank">
 									<svg role="img" aria-label="link to install the program from google play" class="aplication__svg" width="134" height="31">
 										<use xlink:href="./img/icon/sprite.svg#google-play"></use>
 									</svg>
@@ -521,17 +521,15 @@
 		<div class="modals__overlay">
 			<div class="modals__item" data-modal-window="modal-1" aria-hidden="true">
 				<div class="modals__header">
-					<h2 class="modals__title">Login</h2>
+					<h2 class="modals__title">Contact us</h2>
 					<button type="button" class="modals-btn-close" aria-expanded="false"><span class="visually-hidden">close modal window</span></button>
 				</div>
 				<form class="form" action="#" method="post">
-					<label for="login"><span class="visually-hidden">enter login</span></label>
-					<input id="login" name="user-login" type="text" placeholder="Login" class="form__input">
-					<label for="password"><span class="visually-hidden">enter password</span></label>
-					<input id="password" name="user-password" type="password" placeholder="Password" class="form__input">
-					<button class="form__btn button" type="button">Login</button>
+					<label for="phone"><span class="visually-hidden">enter your phone number</span></label>
+					<input id="phone" name="user-login" type="tel" placeholder="Phone" class="form__input">
+					<button class="form__btn button" type="button">Send</button>
+					<span class="form__span">* enter your phone number and we call you</span>
 				</form>
-				<a href="#!" class="modals__link">Forgot your password?</a>
 			</div>
 			<!-- <div class="modals__item" data-modal-window="modal-2" aria-hidden="true">
 				<div class="modals__header">
