--- a/src/index.html
+++ b/src/index.html
@@ -334,24 +334,24 @@
 							<li class="quote__li swiper-slide">
 								<blockquote class="quote__text"> "Great session! Dani was super helpful. She shared some practical advice on how can lorem ip we go about refining our service offerings." </blockquote>
 								<div class="quote__author">
-									<img class="quote__avatar" src="./img/banner/01.png" alt="" width="48" height="48>
-									<span class=" quote__name"> Hadid Khan </span>
+									<img class="quote__avatar" src="./img/banner/01.png" alt="" width="48" height="48">
+									<span class="quote__name"> Hadid Khan </span>
 									<span class="quote__work">UIUX Designer</span>
 								</div>
 							</li>
 							<li class="quote__li swiper-slide">
 								<blockquote class="quote__text"> "It's is both attractive and highly adaptable. It's exactly what I've been looking forefinitely wo lorem ipsum dolorth the investment." </blockquote>
 								<div class="quote__author">
-									<img class="quote__avatar" src="./img/banner/02.png" alt="" width="48" height="48>
-									<span class=" quote__name">Wade Warren</span>
+									<img class="quote__avatar" src="./img/banner/02.png" alt="" width="48" height="48">
+									<span class="quote__name">Wade Warren</span>
 									<span class="quote__work">Web Designer</span>
 								</div>
 							</li>
 							<li class="quote__li swiper-slide">
 								<blockquote class="quote__text"> "I am really satisfied with it. I'm good to go. It really saves me time and effort. It's is exactly what our business has been lacking. " </blockquote>
 								<div class="quote__author">
-									<img class="quote__avatar" src="./img/banner/03.png" alt="" width="48" height="48>
-									<span class=" quote__name">Jenny Wilson</span>
+									<img class="quote__avatar" src="./img/banner/03.png" alt="" width="48" height="48">
+									<span class="quote__name">Jenny Wilson</span>
 									<span class="quote__work">Trust Administrator</span>
 								</div>
 							</li>
