--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,8 @@
 					<div class="banner__card-block card">
 						<div class="card__decor"></div>
 						<svg aria-hidden="true" role="img" class="card__decor-master-card" width="60" height="35">
-							<use xlink:href="./img/icon/sprite.svg#master-card"></use>
+							<use xlink:href="./img/icon/sprite.svg#master-card">
+							</use>
 						</svg>
 						<svg aria-hidden="true" role="img" class="card__decor-nfs" width="27" height="47">
 							<use xlink:href="./img/icon/sprite.svg#nfs"></use>
@@ -74,18 +75,18 @@
 						<svg aria-hidden="true" role="img" class="card__decor-chip" width="59" height="48">
 							<use xlink:href="./img/icon/sprite.svg#chip"></use>
 						</svg>
-						<span class="card__text-number">Credit Card No.</span>
+						<span class="card__text-number">Credit Card No.<span class="emergence" style="--i:1;"></span></span>
 						<div class="card__block-number">
-							<span class="card__number">1602</span>
-							<span class="card__number">0911</span>
-							<span class="card__number">2019</span>
-							<span class="card__number">2021</span>
+							<span class="card__number">1602<span class="emergence" style="--i:2;"></span></span>
+							<span class="card__number">0911<span class="emergence" style="--i:3;"></span></span>
+							<span class="card__number">2019<span class="emergence" style="--i:4;"></span></span>
+							<span class="card__number">2021<span class="emergence" style="--i:5;"></span></span>
 						</div>
 						<div class="card__block-text">
-							<span class="card__text">Name</span>
-							<span class="card__text">Exp.</span>
-							<span class="card__name">REHAN RAIHAN</span>
-							<span class="card__date">09/11</span>
+							<span class="card__text">Name<span class="emergence" style="--i:6;"></span></span>
+							<span class="card__text">Exp.<span class="emergence" style="--i:7;"></span></span>
+							<span class="card__name">OLEH ROZHANSKYI<span class="emergence" style="--i:8;"></span></span>
+							<span class="card__date">09/11<span class="emergence" style="--i:9;"></span></span>
 						</div>
 					</div>
 					<img class="banner__img-card" src="./img/banner/credit-card.svg" alt="image bank card" width="552" height="349">
