--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
 							<span class="users-banner__text">Active users around the wordls</span>
 						</div>
 					</div>
-					<div class="banner__card-block card">
+					<div class="banner__card-block card" aria-hidden="true">
 						<div class="card__decor"></div>
 						<svg aria-hidden="true" role="img" class="card__decor-master-card" width="60" height="35">
 							<use xlink:href="./img/icon/sprite.svg#master-card">
@@ -168,7 +168,7 @@
 					</div>
 					<div class="design__block-card">
 						<img class="design__img" src="./img/design/card.svg" alt="" width="538" height="492">
-						<div class="card card-design-block card-design-block--first">
+						<div class="card card-design-block card-design-block--first" aria-hidden="true">
 							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--first" width="60" height="35">
 								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
 							</svg>
@@ -192,7 +192,7 @@
 								<span class="card__date card__date--first">09/11</span>
 							</div>
 						</div>
-						<div class="card card-design-block card-design-block--second">
+						<div class="card card-design-block card-design-block--second" aria-hidden="true">
 							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--second" width="60" height="35">
 								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
 							</svg>
@@ -216,7 +216,7 @@
 								<span class="card__date card__date--second">09/11</span>
 							</div>
 						</div>
-						<div class="card card-design-block card-design-block--third">
+						<div class="card card-design-block card-design-block--third" aria-hidden="true">
 							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--third" width="60" height="35">
 								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
 							</svg>
@@ -247,7 +247,7 @@
 				<div class="find__container">
 					<div class="find__block-card">
 						<img class="find__img" src="./img/find/card.svg" alt="" width="457" height="491">
-						<div class="card card-find-block card-find-block--first">
+						<div class="card card-find-block card-find-block--first" aria-hidden="true">
 							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--first" width="60" height="35">
 								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
 							</svg>
@@ -271,7 +271,7 @@
 								<span class="card__date card__date--first">09/11</span>
 							</div>
 						</div>
-						<div class="card card-find-block card-find-block--second">
+						<div class="card card-find-block card-find-block--second" aria-hidden="true">
 							<svg aria-hidden="true" role="img" class="card__decor-master-card card__decor-master-card--second" width="60" height="35">
 								<use xlink:href="./img/icon/sprite.svg#master-card"></use>
 							</svg>
