--- a/src/index.html
+++ b/src/index.html
@@ -526,10 +526,10 @@
 					<button type="button" class="modals-btn-close" aria-expanded="false"><span class="visually-hidden">close modal window</span></button>
 				</div>
 				<form class="form" action="#" method="post">
-					<label for="phone"><span class="visually-hidden">enter your phone number</span></label>
-					<input id="phone" name="user-login" type="tel" placeholder="Phone" class="form__input">
+					<label for="email"><span class="visually-hidden">enter your email</span></label>
+					<input id="email" name="user-email" type="email" placeholder="Email" class="form__input" aria-required="true" required>
 					<button class="form__btn button" type="button">Send</button>
-					<span class="form__span">* enter your phone number and we call you</span>
+					<span class="form__span">* enter your emeil and we connect you</span>
 				</form>
 			</div>
 			<!-- <div class="modals__item" data-modal-window="modal-2" aria-hidden="true">
