--- a/src/index.html
+++ b/src/index.html
@@ -529,7 +529,7 @@
 					<label for="email"><span class="visually-hidden">enter your email</span></label>
 					<input id="email" name="user-email" type="email" placeholder="Email" class="form__input" aria-required="true" required>
 					<button class="form__btn button" type="button">Send</button>
-					<span class="form__span">* enter your emeil and we connect you</span>
+					<span class="form__span">* enter your email and we connect you</span>
 				</form>
 			</div>
 			<!-- <div class="modals__item" data-modal-window="modal-2" aria-hidden="true">
